<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main">
    <!--The above is how to enable scrolling on the android device (mostly useful for
    side view on the device, also remember to close it all the way at the bottom-->

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/className"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="80dp"
            android:text="@string/classText"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/credit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <TextView
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="20dp"
            android:text="@string/creditText"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/gradeText"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/credit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <EditText
            android:id="@+id/class1"
            android:layout_width="@dimen/box_width"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:hint="@string/hinText"
            android:inputType="text"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="@+id/className"
            app:layout_constraintStart_toStartOf="@+id/className"
            app:layout_constraintTop_toBottomOf="@id/className" />

        <EditText
            android:id="@+id/class2"
            android:layout_width="@dimen/box_width"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:hint="@string/hinText"
            android:inputType="text"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="@+id/class1"
            app:layout_constraintStart_toStartOf="@+id/class1"
            app:layout_constraintTop_toBottomOf="@id/class1" />

        <EditText
            android:id="@+id/class3"
            android:layout_width="@dimen/box_width"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:hint="@string/hinText"
            android:inputType="text"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="@+id/class2"
            app:layout_constraintStart_toStartOf="@+id/class2"
            app:layout_constraintTop_toBottomOf="@id/class2" />

        <EditText
            android:id="@+id/class4"
            android:layout_width="@dimen/box_width"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:hint="@string/hinText"
            android:inputType="text"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="@+id/class3"
            app:layout_constraintStart_toStartOf="@+id/class3"
            app:layout_constraintTop_toBottomOf="@id/class3" />

        <EditText
            android:id="@+id/class5"
            android:layout_width="@dimen/box_width"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:hint="@string/hinText"
            android:inputType="text"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="@+id/class4"
            app:layout_constraintStart_toStartOf="@+id/class4"
            app:layout_constraintTop_toBottomOf="@id/class4" />

        <EditText
            android:id="@+id/credit1"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/credit"
            app:layout_constraintStart_toStartOf="@+id/credit"
            app:layout_constraintTop_toBottomOf="@id/credit"
            app:layout_constraintVertical_bias="0.03" />

        <EditText
            android:id="@+id/credit2"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="47dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/credit1"
            app:layout_constraintStart_toStartOf="@+id/credit1"
            app:layout_constraintTop_toBottomOf="@id/credit1"
            app:layout_constraintVertical_bias="0.035" />

        <EditText
            android:id="@+id/credit3"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="1"
            app:layout_constraintEnd_toEndOf="@+id/credit2"
            app:layout_constraintStart_toStartOf="@id/credit2"
            app:layout_constraintTop_toBottomOf="@id/credit2" />

        <EditText
            android:id="@+id/credit4"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="1"
            app:layout_constraintEnd_toEndOf="@+id/credit3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/credit3"
            app:layout_constraintTop_toBottomOf="@id/credit3" />

        <EditText
            android:id="@+id/credit5"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="1"
            app:layout_constraintEnd_toEndOf="@+id/credit4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/credit4"
            app:layout_constraintTop_toBottomOf="@id/credit4" />

        <EditText
            android:id="@+id/grade1"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="@+id/grade"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/grade"
            app:layout_constraintTop_toBottomOf="@+id/grade" />

        <EditText
            android:id="@+id/grade2"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="@+id/grade1"
            app:layout_constraintStart_toStartOf="@+id/grade1"
            app:layout_constraintTop_toBottomOf="@+id/grade1" />

        <EditText
            android:id="@+id/grade3"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="@+id/grade2"
            app:layout_constraintStart_toStartOf="@+id/grade2"
            app:layout_constraintTop_toBottomOf="@+id/grade2" />

        <EditText
            android:id="@+id/grade4"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="@+id/grade3"
            app:layout_constraintStart_toStartOf="@+id/grade3"
            app:layout_constraintTop_toBottomOf="@+id/grade3" />

        <EditText
            android:id="@+id/grade5"
            android:layout_width="@dimen/boxCWidth"
            android:layout_height="@dimen/box_height"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:inputType="number"
            android:isScrollContainer="false"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="@+id/grade4"
            app:layout_constraintStart_toStartOf="@+id/grade4"
            app:layout_constraintTop_toBottomOf="@+id/grade4" />

        <TextView
            android:id="@+id/GPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:text="@string/gpa"
            android:textSize="@dimen/gpaSize"
            app:layout_constraintBottom_toTopOf="@+id/btn1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credit5"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:enabled="false"
            android:text="@string/btn_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/GPA" />

        <Button
            android:id="@+id/clear"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:enabled="false"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/GPA" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>